<?xml version="1.0" encoding="UTF-8" ?><!--
  ~ copyright : Ozvid Technologies Pvt. Ltd. < www.ozvid.com >
  ~ @author     : Shiv Charan Panjeta < shiv@ozvid.com >
  ~
  ~ All Rights Reserved.
  ~ Proprietary and confidential :  All information contained herein is, and remains
  ~ the property of Ozvid Technologies Pvt. Ltd. and its partners.
  ~ Unauthorized copying of this file, via any medium is strictly prohibited.
  -->

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Tracol</string>
    <string name="not_sufficient_permissions">Not sufficient permissions \n Goto Settings></string>
    <string name="permissionss">>Permissions</string>
    <string name="this_device_is_not_supported">This Device is not supported</string>
    <string name="problem_connecting_to_the_server">Problem connecting to server,please try later.</string>
    <string name="session_timeout_redirecting">Session timeout, Redirecting to login</string>
    <string name="request_timeout_slow_connection">"Request Timeout. Maybe due to slow connection"</string>
    <string name="press_one_more_time">Press one more time to push app into background</string>
    <string name="email">Email</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="rm_sign">RM\u0020</string>
    <string name="zero_rm">RM 0</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an Account ? Register Now</string>
    <string name="send">Send</string>
    <string name="retry_caps">RETRY</string>
    <string name="exit_caps">EXIT</string>
    <string name="close">Close</string>
    <string name="demo_expired">Demo Expired</string>
    <string name="contact_company_info">Please contact : shiv@toxsl.com</string>


    <string-array name="drawer_items">
        <item>Home</item>
        <item>My Orders</item>
        <item>My Addresses</item>
        <item>Charity</item>
        <item>Videos</item>
        <item>Wishlist</item>
        <item>Settings</item>
        <item>About Us</item>
        <item>Terms &amp; Conditions</item>
        <item>Privacy Policy</item>
        <item>Contact Us</item>
    </string-array>


    <string-array name="category_list">
        <item>Connect</item>
        <item>Fruits</item>
        <item>Community</item>
        <item>Takaful</item>
        <item>Logistics</item>
    </string-array>

    <string-array name="category_list_centre">
        <item>Education</item>
        <item>Amanah</item>
        <item>Pay</item>
        <item>Travel</item>
    </string-array>


    <integer-array name="category_icons">
        <item>@mipmap/ic_three</item>
        <item>@mipmap/ic_tracolfruits</item>
        <item>@mipmap/ic_community</item>
        <item>@mipmap/ic_tracoltakaful</item>
        <item>@mipmap/ic_tracollogistic</item>
    </integer-array>

    <integer-array name="category_icons_centre">
        <item>@mipmap/ic_tracoledu</item>
        <item>@mipmap/ic_one</item>
        <item>@mipmap/ic_tracolpay</item>
        <item>@mipmap/ic_tracoltravel</item>
    </integer-array>

    <string name="error">Restfull error</string>
    <string name="api_is_in_maintenance">Api is in maintenance</string>
    <string name="api_is_expired">Api is in Expired</string>
    <string name="retry_cap">RETRY</string>
    <string name="location_permission_not_specified">Location Permission not specified</string>
    <string name="gps_not_enabled">Gps not enabled</string>
    <string name="not_connected_to_internet">Not connected to Internet</string>
    <string name="poor_internet_connection">Poor internet connection</string>
    <string name="please_wait">Please wait</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_email_reset_email">Enter email address &amp; we\'ll sent you a \n link to reset your password.</string>

    <string name="confirm_password">Confirmed Password</string>
    <string name="change_password">Change Password</string>
    <string name="new_password">New Password</string>
    <string name="please_agree_to_terms_conditions">Please agree to the terms and conditions</string>
    <string name="save">Save</string>
    <string name="about_us">About Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="full_name">Full Name</string>
    <string name="plz_enter_valid_mobile_no">Phone number length should be of 6 to 15 digits</string>
    <string name="no_data_found">No Data Found</string>

    <string name="profile_updated_successfully">Profile updated Successfully!!</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>

    <string name="location_not_specified">Location not specified</string>
    <string name="not_able_to_get_latlong">Not able to get location</string>
    <string name="enable_gps">Please enable your gps</string>
    <string name="dismiss">Dismiss</string>
    <string name="submit">Submit</string>
    <string name="city">City</string>
    <string name="continue_">Continue</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="my_orders">My Orders</string>
    <string name="my_profile">My Profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_valid_email">Please enter valid Email Address</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="password_should_be_atleast_six_characters">Password should be atleast six characters</string>
    <string name="please_enter_the_new_password">Please enter the new password</string>
    <string name="please_enter_valid_password">Password should be minimum 8 characters</string>
    <string name="please_enter_the_confirm_password">Please enter the confirmed password</string>
    <string name="password_not_match">Password don\'t matched</string>
    <string name="please_enter_city">Please enter city name</string>
    <string name="please_enter_the_name">Please enter the name</string>
    <string name="please_enter_the_message">Please enter the message</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="your_gps_seems_to_be_disable">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="google_api_key"> </string>
    <string name="charity">Charity</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_holder_name">Account Holder Name</string>
    <string name="bank_account_number">Bank Account Number</string>
    <string name="routing_number">Routing Number</string>
    <string name="buy_now">Buy Now</string>
    <string name="wishList">Wishlist</string>
    <string name="add_on_cart">Add to cart</string>
    <string name="setting">Settings</string>
    <string name="video">Videos</string>
    <string name="creditdebit">Credit</string>
    <string name="order_now">Order Now</string>
    <string name="fruit">Fruits</string>
    <string name="doctor2U">Doctor 2U</string>
    <string name="home">Home</string>
    <string name="wishlist">WishList</string>
    <string name="cart">Cart</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="checkOut">Check Out</string>
    <string name="allow_location">Allow Location</string>
    <string name="deny">Deny</string>
    <string name="search">Search</string>
    <string name="are_you_sure_want_to_logout">Are you sure, you want to logout ?</string>
    <string name="phone_no">Phone Number</string>
    <string name="payment_detail">Payment Detail</string>
    <string name="order_detail">Order Detail</string>
    <string name="bank">Bank</string>
    <string name="items_colon">Items:\u0020 </string>
    <string name="cart_is_empty">Cart is Empty</string>
    <string name="explore_by_categories">Explore by Categories</string>
    <string name="packages">Packages</string>
    <string name="trending">Trending</string>
    <string name="payment">Payment</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="product_added_to_cart_successfully">Product Added to Cart Successfully</string>
    <string name="product_removed_from_cart">Product removed from cart</string>
    <string name="no_address_found">No Address Found</string>
    <string name="add_address">Add Address</string>
    <string name="landmark">Landmark</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="page_cannot_be_loaded">Page Can not be loaded</string>
    <string name="errors">Errors</string>
    <string name="zip_code">Zip Code</string>
    <string name="phone_number_colon">Phone Number :</string>
    <string name="zip_code_colon">Zip Code :</string>
    <string name="please_enter_address">Please enter address</string>
    <string name="please_enter_zipcode">Please enter zip code</string>
    <string name="plz_enter_phone_number">Please enter phone  number</string>
    <string name="please_add_atleast_one_address">Please add at-least one address</string>
    <string name="patment_status">Payment Status :</string>
    <string name="paid">Paid</string>
    <string name="un_paid">Un paid</string>
    <string name="order_id">Order Id :</string>
    <string name="please_enter_amount">Please enter amount</string>
    <string name="raised_of">\u0020raised 0f\u0020 </string>
    <string name="are_you_sure_want_to_delete_your_address">Are you sure want to delete your address ?</string>
    <string name="connect">Connect</string>
    <string name="logistics">Logistics</string>
    <string name="travel">Travel</string>
    <string name="takafull">Takaful</string>
    <string name="pay">Pay</string>
    <string name="whatsapp_have_not_been_installed">Whatsapp have not been installed.</string>
    <string name="share_content">Share Content</string>
    <string name="donate_now">Donate Now</string>
    <string name="share_using">Share using</string>
    <string name="donate">Donate</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>

</resources>
