<?xml version="1.0" encoding="utf-8"?><!--
  ~ copyright : Ozvid Technologies Pvt. Ltd. < www.ozvid.com >
  ~ @author     : Shiv Charan Panjeta < shiv@ozvid.com >
  ~
  ~ All Rights Reserved.
  ~ Proprietary and confidential :  All information contained herein is, and remains
  ~ the property of Ozvid Technologies Pvt. Ltd. and its partners.
  ~ Unauthorized copying of this file, via any medium is strictly prohibited.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/White"
            android:padding="@dimen/_10sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/contactUsTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/contact_us"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/nameET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contactUsTV" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/emailET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/email"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameET" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/messageET"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:hint="@string/message"
                android:imeOptions="actionDone"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailET" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/sendBT"
                style="@style/buttonViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/send"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                app:layout_constraintEnd_toEndOf="@+id/messageET"
                app:layout_constraintStart_toStartOf="@+id/messageET"
                app:layout_constraintTop_toBottomOf="@+id/messageET" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>