<?xml version="1.0" encoding="utf-8"?><!--
  ~ copyright : Ozvid Technologies Pvt. Ltd. < www.ozvid.com >
  ~ @author     : Shiv Charan Panjeta < shiv@ozvid.com >
  ~
  ~ All Rights Reserved.
  ~ Proprietary and confidential :  All information contained herein is, and remains
  ~ the property of Ozvid Technologies Pvt. Ltd. and its partners.
  ~ Unauthorized copying of this file, via any medium is strictly prohibited.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clickHandle"
            type="com.tracolfood.utils.ViewClickHandler" />

    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10sdp">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/addAddressTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/add_address"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/locationET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:drawableStart="@mipmap/ic_address"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/address"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addAddressTV" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/cityET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:drawableStart="@mipmap/ic_address"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/city"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationET" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/zipCodeET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:drawableStart="@mipmap/ic_address"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/zip_code"
            android:maxLength="6"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityET" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/phoneET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:drawableStart="@mipmap/ic_user"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/phone_no"
            android:maxLength="15"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/zipCodeET" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/landMarkET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableStart="@mipmap/ic_address"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/landmark"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="@+id/locationET"
            app:layout_constraintStart_toStartOf="@+id/locationET"
            app:layout_constraintTop_toBottomOf="@+id/phoneET" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/addBT"
            style="@style/buttonViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:onClick="@{(view)-> clickHandle.onHandleClick(view)}"
            android:text="Add Address"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            app:layout_constraintEnd_toEndOf="@+id/locationET"
            app:layout_constraintStart_toStartOf="@+id/locationET"
            app:layout_constraintTop_toBottomOf="@+id/landMarkET" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--        </androidx.cardview.widget.CardView>-->


    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
</layout>
