<?xml version="1.0" encoding="utf-8"?><!--
  ~ copyright : Ozvid Technologies Pvt. Ltd. < www.ozvid.com >
  ~ @author     : Shiv Charan Panjeta < shiv@ozvid.com >
  ~
  ~ All Rights Reserved.
  ~ Proprietary and confidential :  All information contained herein is, and remains
  ~ the property of Ozvid Technologies Pvt. Ltd. and its partners.
  ~ Unauthorized copying of this file, via any medium is strictly prohibited.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clickHandle"
            type="com.tracolfood.utils.ViewClickHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/toolbarRL"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:gravity="center"
                android:text="Add Bank Details"
                android:textColor="@color/White"
                android:textSize="@dimen/_14sdp"

                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/backIV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:onClick="@{(view)-> clickHandle.onHandleClick(view)}"
                android:padding="@dimen/_10sdp"
                android:src="@mipmap/ic_backwhite" />


        </RelativeLayout>


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/bankNameET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:cursorVisible="false"
            android:drawablePadding="@dimen/_10sdp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/bank_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbarRL" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/accountHolderNameET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:cursorVisible="false"
            android:drawablePadding="@dimen/_10sdp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/account_holder_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bankNameET" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/bankAccountET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:cursorVisible="false"
            android:drawablePadding="@dimen/_10sdp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/bank_account_number"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountHolderNameET" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/routingNumberET"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:cursorVisible="false"
            android:drawablePadding="@dimen/_10sdp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/routing_number"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bankAccountET" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saveBT"
            style="@style/buttonViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:onClick="@{(view)-> clickHandle.onHandleClick(view)}"
            android:text="@string/save"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            app:layout_constraintEnd_toEndOf="@+id/routingNumberET"
            app:layout_constraintStart_toStartOf="@+id/routingNumberET"
            app:layout_constraintTop_toBottomOf="@+id/routingNumberET" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>